# NexusShell-Core

./: - В `pyproject.toml` нужно явно прописать source  .gitignore  ARCHITECTURE.md  CNAME  CONVENTIONS.md  GEMINI.md  PM2 запускает процессы через shell. Нужно убедиться, что в `ecosystem.config.js` прописан явный путь к интерпретатору uv-окружения  SESSION_STATE.md  WHITE-PAPER.md  config.py  index.html  main.py  pyproject.toml  synrail.html  triggers.py  usb-init.sh
In `core/: router.py
In `tools/: memes.py
core/: brain.py  image_tools_handler.py  logger.py  media_handler.py  node2_promoter.py  prompt_cache.py  router.py  tool_registry.py  triggers.py
research_harness_v1/runner/: node2_executor.py
tools/: docs.py  image.py  image_search.py  memes.py  osint.py  prompt_enhancer.py  researcher.py  trend_hunter.py  upscale.py  upscale.py.bak  veo.py  veo_backup_before_fix.py  veo_backup_v28.py  voice.py  watcher.py  web_parser.py
